--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -9,7 +9,7 @@
     <script src="/static/helperFunctions.js" type="text/javascript" defer></script>
 
     <meta charset="UTF-8">
-    <title>Blog Home</title>
+    <title>Blog Homeeee</title>
 </head>
 <!-- when page loads, check if user is logged in and fetch posts-->
 <body onload="loadSession(); loadPosts()">
