--- a/public/html/blogLoginPage.html
+++ b/public/html/blogLoginPage.html
@@ -6,6 +6,8 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="/static/loginReg.js" type="text/javascript" defer></script>
     <script src="/static/helperFunctions.js" type="text/javascript" defer></script>
+    <script src="bower_components/crypto-js/crypto-js.js" type="text/javascript"></script>
+
 
     <meta charset="UTF-8">
     <title>Login Page</title>
