--- a/public/html/blogRegistrationPage.html
+++ b/public/html/blogRegistrationPage.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="/static/blogStyles.css" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="/static/inputValidation.js" type="text/javascript" defer></script>
     <script src="/static/loginReg.js" type="text/javascript" defer></script>
 
     <meta charset="UTF-8">
