Implemented encryption key randomisation. Randomised keys are stored in a JSON file and extracted when needed

--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -42,7 +42,7 @@
                     <label for="inputBlogBody" class="form-label">Post Content: <a style="font-size: 10px">(max character count: 500)</a></label>
                 </div>
                 <button id="postButton" type="button" class="btn btn-success form-btn"
-                        onclick="createPost()">
+                        onclick="createPost();">
                     Post
                 </button>
                 <button id="resetButton" type="button" class="btn btn-secondary form-btn"
