bug fix with posts not loading fully when not logged in
...Certain "stylistic" changes

--- a/public/html/blogRegistrationPage.html
+++ b/public/html/blogRegistrationPage.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="d-flex bd-highlight">
-    <div class="p-2 bd-highlight flex-fill bg-success min-vh-100" id="leftContent">Left content</div>
+    <div class="p-2 bd-highlight flex-fill min-vh-100" id="leftContent" style="background-color: #002654">Left content</div>
     <div class="p-4 bd-highlight bg-light min-vh-100" id="mainContent">
         <h1>UniLeaks Registration</h1>
         <div id="regAlert" class="alert alert-danger alert-dismissible fade show" role="alert" style="visibility:hidden;">
