--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -21,8 +21,8 @@
             <img src="/images/unileaks.png">
         </a>
     </div>
-    <div class="d-flex bd-highlight">
-        <div class="p-2 bd-highlight flex-fill bg-success min-vh-100" id="leftContent">Left content</div>
+    <div class="d-flex bd-highlight" style="height: 100%">
+        <div class="p-2 bd-highlight flex-fill" id="leftContent">Left content</div>
         <div class="p-4 bd-highlight bg-light min-vh-100" id="mainContent">
 
 
@@ -54,9 +54,9 @@
                         onclick="window.location.reload()">
                     Reset
                 </button>
-
+            </form>
         </div>
-        <div class="p-2 bd-highlight flex-fill bg-danger min-vh-100" id="rightContent">
+        <div class="p-2 bd-highlight flex-fill bg-danger" id="rightContent">
 
         </div>
     </div>
