--- a/public/html/blogLoginPage.html
+++ b/public/html/blogLoginPage.html
@@ -19,7 +19,7 @@
     </a>
 </div>
 <div class="d-flex bd-highlight">
-    <div class="p-2 bd-highlight flex-fill bg-success min-vh-100" id="leftContent">Left content</div>
+    <div class="p-2 bd-highlight flex-fill min-vh-100" id="leftContent" style="background-color: #002654">Left content</div>
     <div class="p-4 bd-highlight bg-light min-vh-100" id="mainContent">
         <h1>UniLeaks Login</h1>
         <div id="loginAlert" class="alert alert-danger alert-dismissible fade show" role="alert" style="visibility:hidden;">
