--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -8,6 +8,7 @@
     <script src="/static/post.js" type="text/javascript" defer></script>
     <script src="/static/helperFunctions.js" type="text/javascript" defer></script>
     <script src="/static/inputValidation.js" type="text/javascript" defer></script>
+    <script src="https://kit.fontawesome.com/6512ed700a.js" crossorigin="anonymous"></script>
     <script src="bower_components/crypto-js/crypto-js.js" type="text/javascript"></script>
 
 
@@ -24,6 +25,19 @@
     <div class="d-flex bd-highlight" style="height: 100%">
         <div class="p-2 bd-highlight flex-fill" id="leftContent">Left content</div>
         <div class="p-4 bd-highlight bg-light min-vh-100" id="mainContent">
+
+
+            <div class="d-flex p-2 bd-highlight" id="searchBanner">
+                <div class="input-group" >
+                    <div class="form-outline" style="width: 96%; height: 35px">
+                        <input type="search" id="blogSearch" class="form-control" placeholder="Search for blog posts"/>
+                        <label class="form-label" for="blogSearch"></label>
+                    </div>
+                    <button type="button" class="btn bg-primary" id="searchIcon" onclick="">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
 
 
             <form id="postCreationForm" class="mb-5" enctype="multipart/form-data">
