--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -33,8 +33,10 @@
                         <input type="search" id="blogSearch" class="form-control" placeholder="Search for blog posts"/>
                         <label class="form-label" for="blogSearch"></label>
                     </div>
-                    <button type="button" class="btn bg-primary" id="searchIcon" onclick="">
-                        <i class="fas fa-search"></i>
+                    <button type="button" class="btn bg-primary" id="searchIcon" onclick="
+                    document.cookie = `bloggersearchterm= ${document.getElementById('blogSearch').value}`;
+                    window.location.href = '/search'">
+                    <i class="fas fa-search"></i>
                     </button>
                 </div>
             </div>
