--- a/public/html/blogSearchPage.html
+++ b/public/html/blogSearchPage.html
@@ -29,9 +29,9 @@
 
 
         <div class="d-flex p-2 bd-highlight" id="searchBanner">
-            <div class="input-group" >
-                <div class="form-outline" style="width: 96%; height: 35px">
-                    <input type="search" id="blogSearch" class="form-control" placeholder="Search for blog posts"/>
+            <div class="input-group">
+                <div class="form-outline" style="width: 90%; height: 50px">
+                    <input type="search" id="blogSearch" class="form-control" style="height: 50px" placeholder="Search for blog posts"/>
                     <label class="form-label" for="blogSearch"></label>
                 </div>
                 <button type="button" class="btn bg-primary" id="searchIcon" onclick="
