search bar optimisations

--- a/public/html/blogSearchPage.html
+++ b/public/html/blogSearchPage.html
@@ -30,7 +30,7 @@
 
         <div class="d-flex p-2 bd-highlight" id="searchBanner">
             <div class="input-group">
-                <div class="form-outline" style="width: 90%; height: 50px">
+                <div class="form-outline" style="width: 95%; height: 50px">
                     <input type="search" id="blogSearch" class="form-control" style="height: 50px" placeholder="Search for blog posts"/>
                     <label class="form-label" for="blogSearch"></label>
                 </div>
@@ -72,6 +72,7 @@
                 Reset
             </button>
         </form>
+        <p id="searchResult" class="fw-bold"></p>
     </div>
     <div class="p-2 bd-highlight flex-fill bg-danger" id="rightContent">
 
