--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -8,6 +8,7 @@
     <script src="/static/post.js" type="text/javascript" defer></script>
     <script src="/static/helperFunctions.js" type="text/javascript" defer></script>
     <script src="/static/inputValidation.js" type="text/javascript" defer></script>
+    <script src="/static/loginReg.js" type="text/javascript" defer></script>
     <script src="https://kit.fontawesome.com/6512ed700a.js" crossorigin="anonymous"></script>
     <script src="bower_components/crypto-js/crypto-js.js" type="text/javascript"></script>
 
