Added CAPTCHA to registration page

--- a/public/html/blogRegistrationPage.html
+++ b/public/html/blogRegistrationPage.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <title>Registration Page</title>
 </head>
-<body>
+<body onload="generateCaptcha()">
 <div class="d-flex p-2 bd-highlight bg-primary" id="topBanner">
     <a href="/" class="d-flex flex-fill">
         <img src="/images/unileaks.png">
@@ -42,6 +42,16 @@
                 <label for="inputEmail" class="form-label">Email</label>
                 <input type="email" class="form-control" id="inputEmail" name="email">
                 <span id="emailMsg" style="color:red"> </span>
+            </div>
+            <div class="mb-4 border p-2 rounded" style="background-color: rgba(235,235,235,255);">
+            <p style="font-weight:bold"> CAPTCHA Check </p>
+            <img id="captchaImg"/>
+                <p> Type the characters above: </p>
+                <div class="row">
+                    <div class="col-sm"> <input id="captchaInput" name="captchaInput" class="form-control" /> </div>
+                    <div class="col-sm"> <button type="button" id="captchaBtn" class="btn btn-success" onclick="generateCaptcha()"> Reset </button>  </div>
+
+                </div>
             </div>
             <button id="regButton" type="button" class="btn btn-success form-btn"
                     onclick="register()">
