--- a/public/html/blogLoginPage.html
+++ b/public/html/blogLoginPage.html
@@ -13,13 +13,14 @@
     <title>Login Page</title>
 </head>
 <body>
-<div class="d-flex p-2 bd-highlight bg-primary" id="topBanner">
+<div class="d-flex p-2 bd-highlight bg-dark" id="topBanner">
     <a href="/" class="d-flex flex-fill">
-        <img src="/images/unileaks.png">
+        <img src="/images/unileaks_white.png">
     </a>
 </div>
 <div class="d-flex bd-highlight">
-    <div class="p-2 bd-highlight flex-fill min-vh-100" id="leftContent" style="background-color: #002654">Left content</div>
+    <div class="p-2 bd-highlight flex-fill" id="leftContent" style="background-color: #DDDDDD"></div>
+
     <div class="p-4 bd-highlight bg-light min-vh-100" id="mainContent">
         <h1>UniLeaks Login</h1>
         <div id="loginAlert" class="alert alert-danger alert-dismissible fade show" role="alert" style="visibility:hidden;">
@@ -41,7 +42,7 @@
             </button>
         </form>
     </div>
-    <div class="p-2 bd-highlight flex-fill bg-danger min-vh-100" id="rightContent">Right content</div>
+    <div class="p-2 bd-highlight flex-fill min-vh-100" id="rightContent" style="background-color: #DDDDDD">Right content</div>
 </div>
 
 
