--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -36,10 +36,10 @@
                         <input type="search" id="blogSearch" class="form-control" style="height: 50px" placeholder="Search for blog posts"/>
                         <label class="form-label" for="blogSearch"></label>
                     </div>
-                    <button type="button" class="btn bg-primary" id="searchIcon" onclick="
+                    <button type="button" class="btn bg-dark" id="searchIcon" onclick="
                     document.cookie = `bloggersearchterm= ${document.getElementById('blogSearch').value}`;
                      window.location.href = '/search'">
-                    <i class="fas fa-search"></i>
+                    <i class="fas fa-search" style=" color: white"></i>
                     </button>
                 </div>
             </div>
