--- a/public/html/blogSearchPage.html
+++ b/public/html/blogSearchPage.html
@@ -30,15 +30,15 @@
 
 
         <div class="d-flex p-2 bd-highlight" id="searchBanner">
-            <div class="input-group">
+            <div class="input-group" >
                 <div class="form-outline" style="width: 95%; height: 50px">
                     <input type="search" id="blogSearch" class="form-control" style="height: 50px" placeholder="Search for blog posts"/>
                     <label class="form-label" for="blogSearch"></label>
                 </div>
-                <button type="button" class="btn bg-primary" id="searchIcon" onclick="
+                <button type="button" class="btn bg-dark" id="searchIcon" onclick="
                     document.cookie = `bloggersearchterm= ${document.getElementById('blogSearch').value}`;
-                    window.location.href = '/search'">
-                    <i class="fas fa-search"></i>
+                     window.location.href = '/search'">
+                    <i class="fas fa-search" style=" color: white"></i>
                 </button>
             </div>
         </div>
