--- a/public/html/blogLoginPage.html
+++ b/public/html/blogLoginPage.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <title>Login Page</title>
 </head>
-<body>
+<body onload="generateCaptcha()">
 <div class="d-flex p-2 bd-highlight bg-dark" id="topBanner">
     <a href="/" class="d-flex flex-fill">
         <img src="/images/unileaks_white.png">
@@ -35,16 +35,66 @@
                 <label for="inputPassword" class="form-label">Password</label>
                 <input type="password" class="form-control" id="inputPassword" name="password">
             </div>
+        <div class="mb-4 border p-2 rounded" style="background-color: rgba(235,235,235,255);">
+            <p style="font-weight:bold" class="mb-5"> CAPTCHA Check </p>
+            <img id="captchaImg" class="ms-5"/>
+            <canvas id="captchaCanvas" width="500" height="200" style="border:1px solid black;"></canvas>
+                <p class="mt-5"> Type the characters above: </p>
+                <div class="row">
+                    <div class="col-sm"> <input id="captchaInput" name="captchaInput" class="form-control" /> </div>
+                    <div class="col-sm"> <button type="button" id="captchaBtn" class="btn btn-success" onclick="generateCaptcha()"> Reset </button>  </div>
+                </div>
+            </div>
             <p>Don't have an account? You're missing out. Create one <a href="/registration">here</a></p>
             <button id="loginButton" type="button" class="btn btn-success form-btn"
-                    onclick="login()">
+                    onclick="sendVerificationEmail()">
                 Log in
             </button>
+
         </form>
     </div>
     <div class="p-2 bd-highlight flex-fill min-vh-100" id="rightContent" style="background-color: #DDDDDD">Right content</div>
+
+
+
+
+
+
+
+
+      <div class="offcanvas" tabindex="-1" id="offcanvasAuth" data-bs-backdrop="static" style="height: 53%; left: 34%; bottom: 22%" aria-labelledby="offcanvasExampleLabel">
+                <div class="offcanvas-header" id="offcanvas-edit-header">
+                    <h2 class="offcanvas-title" id="offcanvasEditExampleLabel">Verify Account</h2>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" onclick="onPopupClose()"
+                            aria-label="Close"></button>
+
+                </div>
+         <div id="verificationError" class="alert alert-danger alert-dismissible fade show mx-2" style="visibility:hidden" role="alert">
+                    </div>
+  
+                <div class="offcanvas-body" id="editFormDiv">
+                    <form id="editPostForm">
+                        <h5 id="editRequiredText">Please enter the verification code sent to your email inbox.</h5>
+                        <div class="mb-3 mt-0 form-floating">
+                            <input type="text" class="form-control" required placeholder="Max character count: 50" name="blogtitle" id="verificationCodeInput">
+                            <label for="inputBlogTitle" class="form-label">Verification Code: <a style="font-size: 10px">(max character count: 50)</a></label>
+                        </div>
+      
+                        <button type="button" class="btn btn-success form-btn mt-0" id="editSubmitOffCanvas"
+                                onclick="login()">
+                            Confirm
+                        </button>
+                    </form>
+                </div>
+            </div> 
+
+    <div class="p-2 bd-highlight flex-fill min-vh-100" id="rightContent" style="background-color: #DDDDDD"></div>
+</div>
 </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 </body>
 </html>
