Cross Site Scripting Encoding/Decoding complete across all pages and added to edit posts. Fixed File traversal protection in edit posts

--- a/public/html/blogLandingPage.html
+++ b/public/html/blogLandingPage.html
@@ -77,12 +77,13 @@
 
 
 
-            <div class="offcanvas" tabindex="-1" id="offcanvasEdit" style="height: 53%; left: 34%; bottom: 22%" aria-labelledby="offcanvasExampleLabel">
+            <div class="offcanvas" tabindex="-1" id="offcanvasEdit" style="height: 65%; left: 34%; bottom: 22%" aria-labelledby="offcanvasExampleLabel">
                 <div class="offcanvas-header" id="offcanvas-edit-header">
                     <h2 class="offcanvas-title" id="offcanvasEditExampleLabel">Edit Post</h2>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
                 </div>
+                <div id="editFormErr" class="alert alert-danger" style="visibility: hidden"></div>
 
                 <div class="offcanvas-body" id="editFormDiv">
                     <form id="editPostForm">
